--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,15 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+    <div class="enseigne"><h2>Alcoolisation Ponctuelle Importante</h2></div>
+    <div class="log"><h2><a href="">Sign In</a></h2></div>
+    <div class="bar">
+    <div class="menu"><h2>menu</h2></div>
+    <div class="onBar">
+        <img src="./../images/drinks/LargeBeer.png" alt="">
+        <img src="./../images/girafes/125.png" alt="">
+    </div>
+    <div class="caisse">
+        <img class="caisseImg" src="./../images/bar/caisse.png" alt="">
+    </div>
+        <img class="barImg" src="./../images/bar/bar2.png" alt="">
+    </div>
+</div>
