--- a/views/dashboard/drink-add.hbs
+++ b/views/dashboard/drink-add.hbs
@@ -1,4 +1,4 @@
-<form action="" method="post" enctype="multipart/form-data">
+<form action="/drink-add" method="post" enctype="multipart/form-data">
 
     <label for="drink-name">Name</label>
     <select name="name" id="name">
