--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -11,6 +11,25 @@ body {
   background-color: antiquewhite;
 }
 
+/* .container {
+  left: 50%;
+  transform: translate(-50%);
+} */
+
+.banniere {
+  position: absolute;
+  height: 50px;
+  /* width: 700px; */
+  border: 2px solid black;
+  top: 10px;
+  left: 50%;
+  transform: translate(-50%);
+}
+/* .banierre {
+  width: auto;
+  margin: auto;
+} */
+
 .bar {
   position: absolute;
   bottom: 0;
@@ -61,16 +80,6 @@ img:nth-child(2) {
   left: 115px;
 }
 
-.enseigne {
-  position: absolute;
-  height: 125px;
-  width: 400px;
-  border: 2px solid black;
-  top: 10px;
-  left: 50%;
-  transform: translate(-50%);
-}
-
 .log {
   position: absolute;
   right: 20%;
@@ -80,7 +89,14 @@ img:nth-child(2) {
   border: 2px solid black;
 }
 
-/* min-height: 620px;
-max-height: 920px;
-min-width: 350px;
-max-width: 420px; */
+/* @media screen and (max-width: 1200px) {
+  .barImg {
+    height: 300px;
+  }
+} */
+
+/* 320px — 480px: Mobile devices
+481px — 768px: iPads, Tablets
+769px — 1024px: Small screens, laptops
+1025px — 1200px: Desktops, large screens
+1201px and more —  Extra large screens, TV */
