--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <div class="container">
-    <div class="enseigne"><h2>Alcoolisation Ponctuelle Importante</h2></div>
+    
+    <a href=""><img class="banniere" src="./../images/banniere.png" alt=""></a>
     <div class="log"><h2><a href="">Sign In</a></h2></div>
     <div class="bar">
     <div class="menu"><h2>menu</h2></div>
