--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,5 +1,5 @@
 
-<form action="" method="post">
+<form action="/signup" method="post">
     <label for="username">Name</label>
         <input type="text" name="username" id="username">
     <label for="email">Email</label>
@@ -8,4 +8,4 @@
         <input type="password" name="password" id="password" required>
     <button>Create a account</button>
 </form>
-<p>Don't have an account yet ? <a href="">Sign up</a></p>
+<p>Already have an account ? <a href="/signin">Sign up</a></p>
