--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -1,8 +1,8 @@
-<form action="post">
+<form action="/signin" method="post">
     <label for="email">Email</label>
-    <input type="email" id="email" placeholder="Enter your email" required>
+    <input type="email" id="email" placeholder="Enter your email" name="email" required>
     <label for="password" class="label-ref label">Password</label>
     <input id="password" type="password" class="input-text input" placeholder="Enter your password" required name="password">
     <button>Log in</button>
 </form>
-<p>Already have an account ? <a href="">Sing in</a></p>
+<p>Don't have an account yet ? <a href="/signup">Sign up</a></p>
