--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <a href=""><img class="banniere" src="./../images/banniere.png" alt=""></a>
-   <div class="log"><h2><a href="/signin">Sign In</a></h2></div>
+   <div class="log"><h2><a href="/signin"><img class="banniere" src="./../images/login.png" alt=""></a></h2></div>
     <div class="bar">
     <div class="menu"><h2>menu</h2></div>
     <div class="onBar">
