--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,13 @@
 <div class="container">
     <a href=""><img class="banniere" src="./../images/banniere.png" alt=""></a>
-   <div class="log"><h2><a href="/signin"><img class="banniere" src="./../images/login.png" alt=""></a></h2></div>
+   <div class="log"><h2>
+        {{#unless isLoggedIn}}
+       <a href="/signin"><img class="banniere" src="./../images/login.png" alt=""></a>
+        {{/unless}}
+        {{#if isLoggedIn}}
+        <a href="/logout"><img class="banniere" src="./../images/logout.png" alt=""></a>
+        {{/if}}
+       </h2></div>
     <div class="bar">
     <div class="menu"><h2>menu</h2></div>
     <div class="onBar">
