modif index ajout form conso

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
         {{/if}}
        </h2></div>
     <div class="bar">
-    <div class="menu"><a href=""><img src="./../images/menu3.png"</a></div>
+    <div class="menu"><a href=""><img src="./../images/menu3.png"></a></div>
     <div class="onBar">
         <img src="./../images/drinks/LargeBeer.png" alt="">
         <img src="./../images/girafes/125.png" alt="">
