--- a/views/user/consumption-add.hbs
+++ b/views/user/consumption-add.hbs
@@ -13,5 +13,6 @@
     <label for="quantity">Quantity</label>
     <input type="number" name="quantity" id="quantity">
 
+    <button>Add Drink</button>
 
 </form>
