--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -8,4 +8,4 @@
         <input type="password" name="password" id="password" required>
     <button>Create a account</button>
 </form>
-<p>Already have an account ? <a href="/signin">Sign up</a></p>
+<p>Already have an account ? <a href="/signin">Sign in</a></p>
