--- a/views/dashboard/drink-add.hbs
+++ b/views/dashboard/drink-add.hbs
@@ -3,6 +3,9 @@
     <label for="drink-name">Name</label>
     <input type="text" name="name" id="name">
 
+    <label for="drink-image">Image</label>
+    <input type="file" name="image" id="image">
+
 <label for="ABV"> ABV (Alcohol by Volume)</label>
     <input type="number" name="ABV" min="1" max="100">
 
@@ -20,8 +23,7 @@
         <option value="2">2 cl</option>
     </select>
     
-    <label for="drink-image">Image</label>
-    <input type="file" name="image" id="">
+
 
     <button>Add Drink</button>
 </form>
