update drink probleme update

--- a/views/dashboard/drink-update.hbs
+++ b/views/dashboard/drink-update.hbs
@@ -1,15 +1,15 @@
 <form action="/drink-update" method="post" enctype="multipart/form-data">
 
     <label for="drink-name">Name</label>
-   <input type="text" name="name" id="name" value="{{this.name}}">
+   <input type="text" name="name" id="name" value="{{drink.name}}">
 
    <label for="ABV">ABV (Alcohol By Volume)</label>
-   <input type="number" name="ABV" id="ABV" value="{{this.ABV}}">
+   <input type="number" name="ABV" id="ABV" value="{{drink.ABV}}">
 
     <label for="size">Size</label>
     <select name="size" id="size">
         <option value="-1" disabled selected>Choose a size </option>
-        {{#each drink}}
+        {{#each drinkSize}}
             <option value="{{this._id}}">{{this.size}}</option>
         {{/each}}
     </select>
@@ -18,4 +18,5 @@
 
     <label for="drink-image">Choose a Image</label>
     <input type="file" name="image" id="image">
+    <button>Update Drink</button>
 </form>
