--- a/views/partials/dashboard_drink_row.hbs
+++ b/views/partials/dashboard_drink_row.hbs
@@ -11,7 +11,7 @@
   <div>{{this.size}} cl</div>
 </td>
 <td class="table-division">
-  <a href="/drink-edit/{{this._id}}">📖</a>
+  <a href="/drink-update/{{this._id}}">📖</a>
 </td>
 <td class="table-division">
   <a href="/drink-delete/{{this._id}}">🗑️</span></a>
