add nav dashboard, user-manage page

--- a/views/dashboard/drink-update.hbs
+++ b/views/dashboard/drink-update.hbs
@@ -1,3 +1,7 @@
+{{> nav_dashboard}}
+
+<h2><a href="/drink-add">Add Drink</a></h2>
+
 <form action="/drink-update" method="post" enctype="multipart/form-data">
 
     <label for="drink-name">Name</label>
