--- a/views/dashboard/user-manage.hbs
+++ b/views/dashboard/user-manage.hbs
@@ -1,27 +1,25 @@
 {{> nav_dashboard}}
 
-<h1>Drink Manage Page</h1>
-<h2><a href="/drink-add">Add Drink</a></h2>
+<h1>User Manage Page</h1>
 
   <table class="product-manage-table">
     <thead>
       <tr class="table-row">
-        <th class="table-head">Image</th>
         <th class="table-head">Name</th>
-        <th class="table-head">ABV</th>
-        <th class="table-head">Size</th>
+        <th class="table-head">Email</th>
+        <th class="table-head">Role</th>
         <th class="table-head">Edit</th>
         <th class="table-head">Delete</th>
       </tr>
     </thead>
 
     <tbody>
-      {{#each drinkManage}}
+      {{#each userManage}}
       <tr class="table-row">
-        {{> dashboard_drink_row}}
+        {{> dashboard_user_row}}
       </tr>
       {{/each}}
-      {{#unless drinkManage}}
+      {{#unless userManage}}
       <tr>
         <td colspan="6">sorry no drink yet</td>
       </tr>
