--- a/views/dashboard/drink-add.hbs
+++ b/views/dashboard/drink-add.hbs
@@ -1,3 +1,5 @@
+{{> nav_dashboard}}
+
 <form action="/drink-add" method="post" enctype="multipart/form-data">
 
     <label for="drink-name">Name</label>
