--- a/views/partials/nav_dashboard.hbs
+++ b/views/partials/nav_dashboard.hbs
@@ -4,10 +4,20 @@
     {{/unless}}
     {{#if isLoggedIn}}
     <a href="">Form Add Conso User</a>
-    <a href="">Recap</a>
-    <a href="/logout"><img class="banniere" src="./../images/logout.png" alt=""></a>
+    <a href="">Recap conso</a>
+    <a href="">Profil</a>
+    <a href="/logout">LOGOUT</a>
+
+    <div class="adminNav">
+        <a href="/drink-add">Add Drink</a>
+        <a href="/drink-manage">Manage Drink</a>
+        <a href="/user-manage">Manage User</a>
+    </div>
     {{/if}}
 
+    {{#if isAdmin}}
+        <a href="">TEST</a>
+    {{/if}}
 
     
 </nav>
