--- a/views/partials/dashboard_user_row.hbs
+++ b/views/partials/dashboard_user_row.hbs
@@ -9,8 +9,8 @@
   <div>{{this.role}}</div>
 </td>
 <td class="table-division">
-  <a href="/drink-update/{{this._id}}">📖</a>
+  <a href="/user-update/{{this._id}}">📖</a>
 </td>
 <td class="table-division">
-  <a href="/drink-delete/{{this._id}}">🗑️</span></a>
+  <a href="/user-delete/{{this._id}}">🗑️</span></a>
 </td>
