--- a/views/dashboard/drink-update.hbs
+++ b/views/dashboard/drink-update.hbs
@@ -1,8 +1,8 @@
 {{> nav_dashboard}}
 
-<h2><a href="/drink-add">Add Drink</a></h2>
+<h2><a href="/drink-update">Add Drink</a></h2>
 
-<form action="/drink-update" method="post" enctype="multipart/form-data">
+<form action="/drink-update/{{drink._id}}" method="post" enctype="multipart/form-data">
 
     <label for="drink-name">Name</label>
    <input type="text" name="drinkName" id="name" value="{{drink.drinkName}}">
