--- a/views/partials/dashboard_drink_row.hbs
+++ b/views/partials/dashboard_drink_row.hbs
@@ -2,7 +2,7 @@
   <div><img src="{{this.image}}" alt="img" class="table-image" /></div>
 </td>
 <td class="table-division">
-  <div>{{this.name}}</div>
+  <div>{{this.drinkName}}</div>
 </td>
 <td class="table-division">
   <div>{{this.ABV}} °</div>
