form consumption plus vue

--- a/views/partials/nav_dashboard.hbs
+++ b/views/partials/nav_dashboard.hbs
@@ -3,7 +3,7 @@
        <a href="/signin">LOGIN</a>
     {{/unless}}
     {{#if isLoggedIn}}
-    <a href="">Form Add Conso User</a>
+    <a href="/cons-add">Form Add Conso User</a>
     <a href="">Recap conso</a>
     <a href="">Profil</a>
     <a href="/logout">LOGOUT</a>
