--- a/views/user/consumption-add.hbs
+++ b/views/user/consumption-add.hbs
@@ -1,4 +1,6 @@
-<form action="" method="post">
+{{> nav_dashboard}}
+
+<form action="/cons-add" method="post">
     <label for="date">Date</label>
     <input type="date" name="date" id="date">
 
