--- a/views/partials/profile_consumption_row.hbs
+++ b/views/partials/profile_consumption_row.hbs
@@ -1,11 +1,11 @@
 <td id="date">
-    {{this.date}}
+    {{date}}
 </td>
 <td id="name">
-    {{this.name}}
+    {{drink.drinkName}}
 </td>
 <td id="quantity">
-    {{this.quantity}}
+    {{quantity}}
 </td>
 <td id="ABV">
     {{drink.ABV}}
@@ -14,5 +14,5 @@
    
 </td>
 <td id="price">
-{{this.price}}
+
 </td>
