--- a/views/user/profil.hbs
+++ b/views/user/profil.hbs
@@ -14,7 +14,7 @@
         <tbody>
             {{#each consumption}}
             <tr>
-               {{> profile_consumption_row}} 
+               {{> profile_consumption_row this}} 
             </tr>
             {{/each}}
         </tbody>
