calandar inprogress view ok

--- a/views/partials/nav_dashboard.hbs
+++ b/views/partials/nav_dashboard.hbs
@@ -5,7 +5,7 @@
     {{#if isLoggedIn}}
     <a href="/cons-add">Form Add Conso User</a>
     <a href="">Recap conso</a>
-    <a href="">Profil</a>
+    <a href="/profil">Profil</a>
     <a href="/logout">LOGOUT</a>
 
     {{#if isAdmin}}
