--- a/views/user/consumption-add.hbs
+++ b/views/user/consumption-add.hbs
@@ -4,6 +4,9 @@
     <label for="date">Date</label>
     <input type="date" name="date" id="date">
 
+    <label for="title">Title</label>
+    <input type="text" name="title" id="title">
+
     <label for="drink">Drink</label>
     <select name="drink" id="drink">
         <option value="-1" disabled selected>Choose a name</option>
