--- a/views/user/profil.hbs
+++ b/views/user/profil.hbs
@@ -1,9 +1,12 @@
  <script src="js/profil.js" type="module" ></script>
  
+{{> nav_dashboard}}
+
  <table>
         <thead>
             <tr>
                 <th>Date</th>
+                <th>Title</th>
                 <th>Name</th>
                 <th>Quantity</th>
                 <th>ABV</th>
