Pushing on heroku

--- a/views/user/profil.hbs
+++ b/views/user/profil.hbs
@@ -23,5 +23,10 @@
         </tbody>
     </table>
 
+    <p>
+    {{#each drink}}
+    <p>{{this.drinkName}}</p>
+    {{/each}}
+    </p>
     <div id='calendar'></div>
   
