--- a/views/user/consumption-add.hbs
+++ b/views/user/consumption-add.hbs
@@ -1,6 +1,6 @@
 {{> nav_dashboard}}
 
-<form action="/cons-add" method="post">
+{{!-- <form action="/cons-add" method="post">
     <label for="date">Date</label>
     <input type="date" name="date" id="date">
 
@@ -20,4 +20,22 @@
 
     <button>Add Drink</button>
 
+</form> --}}
+
+<form action="/cons-add" method="post">
+        <label for="date">Date</label>
+    <input type="date" name="date" id="date">
+
+    <label for="title">Title</label>
+    <input type="text" name="title" id="title">
+    <br>
+    {{#each drink}}
+        <br>
+        <label for="drink">{{this.drinkName}}</label>
+        <input type="number" name="{{this._id}}" id="quantity" value="{{this.drinkName}}">
+        <br>
+    {{/each}}
+
+    <button>Add</button>
 </form>
+
