--- a/views/user/consumption-add.hbs
+++ b/views/user/consumption-add.hbs
@@ -32,7 +32,7 @@
     {{#each drink}}
         <br>
         <label for="drink">{{this.drinkName}}</label>
-        <input type="number" name="{{this._id}}" id="quantity" value="{{this.drinkName}}">
+        <input type="number" name="{{this._id}}" id="quantity" value="0">
         <br>
     {{/each}}
 
