--- a/views/user/profil.hbs
+++ b/views/user/profil.hbs
@@ -1,32 +1,10 @@
- <script src="js/profil.js" type="module" ></script>
  
 {{> nav_dashboard}}
 
- <table>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Title</th>
-                <th>Name</th>
-                <th>Quantity</th>
-                <th>ABV</th>
-                <th>Weekly Percentage</th>
-                <th>Price</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each consumption}}
-            <tr>
-               {{> profile_consumption_row this}} 
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+<div id="listconteneur"></div>
 
-    <p>
-    {{#each drink}}
-    <p>{{this.drinkName}}</p>
-    {{/each}}
-    </p>
-    <div id='calendar'></div>
+
+
+ <div id='calendar'></div>
   
+ 
