--- a/views/partials/nav_dashboard.hbs
+++ b/views/partials/nav_dashboard.hbs
@@ -1,18 +1,17 @@
-<nav>
+<nav class="nav">
     {{#unless isLoggedIn}}
-       <a href="/signin">LOGIN</a>
+       <a class="navbtn" href="/signin">LOGIN</a>
     {{/unless}}
     {{#if isLoggedIn}}
-    <a href="/cons-add">Form Add Conso User</a>
-    <a href="">Recap conso</a>
-    <a href="/profil">Profil</a>
-    <a href="/logout">LOGOUT</a>
+    <a class="navbtn" href="/drink-add">Add Drink</a>
+    <a class="navbtn" href="/cons-add">Add Conso</a>
+    <a class="navbtn" href="/profil">Profil</a>
+    <a class="navbtn" href="/logout">LOGOUT</a>
 
     {{#if isAdmin}}
            <div class="adminNav">
-        <a href="/drink-add">Add Drink</a>
-        <a href="/drink-manage">Manage Drink</a>
-        <a href="/user-manage">Manage User</a>
+        <a class="navbtn" href="/drink-manage">Manage Drink</a>
+        <a class="navbtn" href="/user-manage">Manage User</a>
     </div>
     {{/if}}
 
